stylesheet changes to fix spacing of h1 and h2

--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@
 
 body {
   background-color: white;
-  background-image: url("img/notes-bg-white.png");
-  background-size: contain;
-  background-repeat: no-repeat;
+    background-image: url("img/notes-bg-white.png");
+    background-size: contain;
+    background-repeat: no-repeat;
   font: 0.8125em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -30,19 +30,23 @@ img {
 
 h1 {
   padding-top: 60px;
-  margin-left: 40px;
+  margin-left: 20px;
   color: black;
   font-family: "Zen Tokyo Zoo", cursive;
   letter-spacing: 0.1em;
-  font-size: 50px;
+  font-size: 40px;
+  line-height: normal;
 }
+
 h2 {
   color: black;
   font-family: "Zen Tokyo Zoo", cursive;
   letter-spacing: 0.1em;
   font-size: 1em;
-  margin-left: 60px;
-}
+  margin-left: 40px;
+  line-height: normal;
+  }
+
 /* for error code */
 h3 {
   color: black;
